// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendTransactionRaw, with option 1`] = `
Array [
  Array [
    10,
    2000000000,
    5,
    "contractAddr",
    1,
    "command",
  ],
  Array [
    20,
    3000000000,
    40000,
    "contractAddr",
    1,
    "command",
  ],
]
`;

exports[`sendTransactionRaw, with option 2`] = `
Array [
  Array [
    "createTxCommand",
    "privateKey",
  ],
  Array [
    "createTxCommand",
    "privateKey",
  ],
]
`;

exports[`sendTransactionRaw, without option 1`] = `
Array [
  Array [
    10,
    2000000000,
    5,
    "contractAddr",
    1,
    "command",
  ],
]
`;

exports[`sendTransactionRaw, without option 2`] = `
Array [
  Array [
    "createTxCommand",
    "privateKey",
  ],
]
`;
